--- a/button1.html
+++ b/button1.html
@@ -1,4 +1,4 @@
-<a href="#" class="myButton">Datenbanken</a>
+<a href="https://www.notion.so/Datenbanken-fa7af44db9334d9498cce54b27841201" class="myButton">Datenbanken</a>
 
 <style>
 .myButton {
