--- a/button1.html
+++ b/button1.html
@@ -10,7 +10,7 @@
 	font-family:Verdana;
 	font-size:15px;
 	font-weight:bold;
-	padding:100%;
+	padding:32px 38px;
 	text-decoration:none;
 	text-shadow:0px -1px 0px #cfcfcf;
 }
